###############################################################################
#                                 Main library                                #
###############################################################################

[metadata]
name = laplace-lora
version = 0.0.1
author = Adam X. Yang
url = https://github.com/adamxyang/laplace-lora
project_urls =
    Bug Tracker = https://github.com/adamxyang/laplace-lora/issues
description = laplace-lora: Bayesian low-rank adaptation for large language models
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm


